# claud-io

./: DESIGN_SYSTEM.md  SIDEBAR_CODE_CHANGES.md  SIDEBAR_UX_IMPROVEMENTS.md  package-lock.json  package.json  test-state-sync.sh
.claude/: settings.json
.claude/hooks/: state-notifier.sh
.github/: ARCHITECTURE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/agents/: commands.rs  manager.rs  mod.rs  runtime.rs
src-tauri/src/content/: commands.rs  manager.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_projects.sql  002_agents.sql  003_content.sql  004_sync.sql
src-tauri/src/projects/: commands.rs  manager.rs  mod.rs
src-tauri/src/sync/: agent_parser.rs  commands.rs  git_sync.rs  mod.rs  project_discovery.rs  watcher.rs
src-tauri/src/terminal/: commands.rs  manager.rs  mod.rs  pty.rs  session.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx  page.tsx
src/components/: AmbientBackground.tsx  ClaudeCore.tsx  GlassCard.tsx  GlassTerminal.tsx  StatusBar.tsx
src/components/GlassTerminal/: GlassTerminal.example.tsx  GlassTerminal.tsx  GlassTerminal.types.ts  INTEGRATION.md  README.md  index.ts
src/components/agents/: AgentCreationWizard.tsx  WizardStep1BasicInfo.tsx  WizardStep2SystemPrompt.tsx  WizardStep3Tools.tsx  WizardStep4Review.tsx  index.ts
src/components/layout/: AppLayout.tsx  (+5 more)
src/hooks/: useClaudeState.ts
src/lib/: store.ts
src/types/: agent.ts  content.ts  project.ts  tauri.ts  terminal.ts
(+44 files in other folders)
